--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "apollo-server-micro": "^3.10.3",
+    "cors": "^2.8.5",
+    "micro": "^9.4.1",
     "next": "12.3.1",
+    "nexus": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
