--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "micro": "^9.4.1",
     "next": "12.3.1",
+    "nextjs-cors": "^2.1.1",
     "nexus": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
